Misc/yomoney-ingress-agic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yomoney-ingress
  namespace: yomoney-poc-dev
  annotations:    
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
spec:  
  rules:    
  - http:
      paths:
      - path: /elastic
        backend:
          serviceName: elastic-service
          servicePort: 9200
